Bug 63873 - Fix compiler warning for mismatched function signature
Summary: Fix compiler warning for mismatched function signature
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-24 09:19 UTC by Stef Walter
Modified: 2013-05-11 19:23 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix compiler warning for mismatched function signature (708 bytes, patch)
2013-04-24 09:19 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2013-04-24 09:19:09 UTC
Fix this function signature


user.c: In function ‘user_accounts_user_iface_init’:
user.c:1939:34: warning: assignment from incompatible pointer type [enabled by default]
Comment 1 Stef Walter 2013-04-24 09:19:12 UTC
Created attachment 78415 [details] [review]
Fix compiler warning for mismatched function signature


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.