Fix compiler warning for mismatched function signature

https://bugs.freedesktop.org/show_bug.cgi?id=63873